--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -895,7 +895,7 @@ var fullscreen = false;  //initial state
         </div>
         <div class="col-sm-8">
             <div>Diameter in pixels</div>
-            <div><a href="{{ url_for('indi_allsky.image_circle_helper_view') }}" class="text-decoration-none link-info">Image Circle Helper</a></div>
+            <div><a href="{{ url_for('indi_allsky.image_circle_helper_view') }}" class="text-decoration-none link-info" target="_blank">Image Circle Helper</a></div>
         </div>
     </div>
 
