--- a/indi_allsky/flask/templates/imagecirclehelper.html
+++ b/indi_allsky/flask/templates/imagecirclehelper.html
@@ -188,6 +188,7 @@ function closeFullscreen() {
         </div>
 
         <div class="col-sm-1">
+            <!-- This button does not do anything, it just gives the user something to click instead of the image (which will go fullscreen) -->
             <button class="btn btn-primary">Refresh</button>
         </div>
     </div>
