--- a/indi_allsky/flask/templates/imagecirclehelper.html
+++ b/indi_allsky/flask/templates/imagecirclehelper.html
@@ -159,7 +159,7 @@ function closeFullscreen() {
             {{ form_imagecircle.IMAGE_CIRCLE_DIAMETER.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_imagecircle.IMAGE_CIRCLE_DIAMETER(class='form-select bg-secondary') }}
+            {{ form_imagecircle.IMAGE_CIRCLE_DIAMETER(class='form-control bg-secondary') }}
         </div>
 
         <div class="col-sm-1">
