--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -729,6 +729,35 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TEST_CAMERA__ROTATING_STAR_COUNT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEST_CAMERA__ROTATING_STAR_COUNT(class='form-control bg-secondary') }}
+            <div id="TEST_CAMERA__ROTATING_STAR_COUNT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            Rotating Star Test Camera
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEST_CAMERA__BUBBLE_COUNT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEST_CAMERA__BUBBLE_COUNT(class='form-control bg-secondary') }}
+            <div id="TEST_CAMERA__BUBBLE_COUNT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            Bubble Test Camera
+        </div>
+    </div>
+
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.INDI_CONFIG_DEFAULTS.label(class='col-form-label') }}
         </div>
         <div class="col-sm-6">
@@ -8005,6 +8034,8 @@ const field_names = [
     'PYCURL_CAMERA__USERNAME',
     'PYCURL_CAMERA__PASSWORD',
     'ACCUM_CAMERA__SUB_EXPOSURE_MAX',
+    'TEST_CAMERA__ROTATING_STAR_COUNT',
+    'TEST_CAMERA__BUBBLE_COUNT',
     'FOCUSER__CLASSNAME',
     'FOCUSER__GPIO_PIN_1',
     'FOCUSER__GPIO_PIN_2',
