--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2437,7 +2437,9 @@ var camera_id = {{ camera_id }};
             {{ form_config.CARDINAL_DIRS__DIAMETER(class='form-control bg-secondary') }}
             <div id="CARDINAL_DIRS__DIAMETER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <div><a href="{{ url_for('indi_allsky.image_circle_helper_view') }}" class="text-decoration-none link-info" target="_blank">Image Circle Helper</a></div>
+        </div>
     </div>
 
     <div class="form-group row">
