--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -742,6 +742,18 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TEST_CAMERA__ROTATING_STAR_FACTOR.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEST_CAMERA__ROTATING_STAR_FACTOR(class='form-control bg-secondary') }}
+            <div id="TEST_CAMERA__ROTATING_STAR_FACTOR-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TEST_CAMERA__BUBBLE_COUNT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -8038,6 +8050,7 @@ const field_names = [
     'PYCURL_CAMERA__PASSWORD',
     'ACCUM_CAMERA__SUB_EXPOSURE_MAX',
     'TEST_CAMERA__ROTATING_STAR_COUNT',
+    'TEST_CAMERA__ROTATING_STAR_FACTOR',
     'TEST_CAMERA__BUBBLE_COUNT',
     'FOCUSER__CLASSNAME',
     'FOCUSER__GPIO_PIN_1',
