show mini timelapse if thumbnail is missing

--- a/indi_allsky/flask/templates/minivideoviewer.html
+++ b/indi_allsky/flask/templates/minivideoviewer.html
@@ -260,7 +260,7 @@ function populate_videos(video_list) {
         $('<img />', {
             'src'   : item['thumbnail_url'],
             //'style' : "height:auto;max-width:100%;object-fit:scale-down;",
-            'alt'   : "Keogram",
+            'alt'   : "Thumbnail",
         }).appendTo(m_a);
 
 
