--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -753,6 +753,18 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TEST_CAMERA__IMAGE_CIRCLE_DIAMETER.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEST_CAMERA__IMAGE_CIRCLE_DIAMETER(class='form-control bg-secondary') }}
+            <div id="TEST_CAMERA__IMAGE_CIRCLE_DIAMETER-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TEST_CAMERA__ROTATING_STAR_COUNT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -8074,6 +8086,7 @@ const field_names = [
     'ACCUM_CAMERA__SUB_EXPOSURE_MAX',
     'TEST_CAMERA__WIDTH',
     'TEST_CAMERA__HEIGHT',
+    'TEST_CAMERA__IMAGE_CIRCLE_DIAMETER',
     'TEST_CAMERA__ROTATING_STAR_COUNT',
     'TEST_CAMERA__ROTATING_STAR_FACTOR',
     'TEST_CAMERA__BUBBLE_COUNT',
