additional config help

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -785,6 +785,7 @@ var camera_id = {{ camera_id }};
             <div id="TEST_CAMERA__ROTATING_STAR_FACTOR-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
+            1.0 = 0.25 degrees/minute [sidereal rate]
         </div>
     </div>
 
@@ -2929,6 +2930,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>The ratio of the size of the keogram as it relates to the image circle</div>
+            <div>0.05 - 0.15 is a good starting point</div>
         </div>
     </div>
 
