--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -36,6 +36,7 @@ figure img {width: 100%;}
 <script type="text/javascript">
 var camera_id = {{ camera_id }};
 var lightbox = null;
+var oldest_entry_default = false;
 </script>
 
 {% endblock %}
@@ -493,6 +494,7 @@ function day_change(json_data) {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
+
             gallery_data = [];
             rdata['IMAGE_DATA'].forEach(item => {
                 gallery_data.push({
@@ -723,14 +725,128 @@ function init() {
 }
 
 
+function nextYear() {
+    var year_select_val = $("#YEAR_SELECT").val();
+
+    oldest_entry_default = true;
+
+    $('#YEAR_SELECT option').each(function(index, element) {
+        if (index == 0 && element.value == year_select_val) {
+            console.log('At latest year');
+            return false;
+        } else if (element.value == year_select_val) {
+            console.log('Next year');
+            $("#YEAR_SELECT").val($("#YEAR_SELECT")[0].options[index - 1].value).change();
+            return false;
+        };
+    });
+}
+
+
+function previousYear() {
+    var year_select_val = $("#YEAR_SELECT").val();
+
+    oldest_entry_default = false;
+
+    $('#YEAR_SELECT option').each(function(index, element) {
+        if (index == $("#YEAR_SELECT")[0].options.length - 1) {
+            console.log('At oldest year');
+            return false;
+        } else if (element.value == year_select_val) {
+            console.log('Previous year');
+            $("#YEAR_SELECT").val($("#YEAR_SELECT")[0].options[index + 1].value).change();
+            return false;
+        };
+    });
+}
+
+
+function nextMonth() {
+    var month_select_val = $("#MONTH_SELECT").val();
+
+    oldest_entry_default = true;
+
+    $('#MONTH_SELECT option').each(function(index, element) {
+        if (index == 0 && element.value == month_select_val) {
+            console.log('At latest month');
+            nextYear();
+            return false;
+        } else if (element.value == month_select_val) {
+            console.log('Next month');
+            $("#MONTH_SELECT").val($("#MONTH_SELECT")[0].options[index - 1].value).change();
+            return false;
+        };
+    });
+}
+
+
+function previousMonth() {
+    var month_select_val = $("#MONTH_SELECT").val();
+
+    oldest_entry_default = false;
+
+    $('#MONTH_SELECT option').each(function(index, element) {
+        if (index == $("#MONTH_SELECT")[0].options.length - 1) {
+            console.log('At oldest month');
+            previousYear();
+            return false;
+        } else if (element.value == month_select_val) {
+            console.log('Previous month');
+            $("#MONTH_SELECT").val($("#MONTH_SELECT")[0].options[index + 1].value).change();
+            return false;
+        };
+    });
+}
+
+
+function nextDay() {
+    var day_select_val = $("#DAY_SELECT").val();
+
+    oldest_entry_default = true;
+
+    $('#DAY_SELECT option').each(function(index, element) {
+        if (index == 0 && element.value == day_select_val) {
+            console.log('At latest day');
+            nextMonth();
+            return false;
+        } else if (element.value == day_select_val) {
+            console.log('Next day');
+            $("#DAY_SELECT").val($("#DAY_SELECT")[0].options[index - 1].value).change();
+            return false;
+        };
+    });
+}
+
+
+function previousDay() {
+    var day_select_val = $("#DAY_SELECT").val();
+
+    oldest_entry_default = false;
+
+    $('#DAY_SELECT option').each(function(index, element) {
+        if (index == $("#DAY_SELECT")[0].options.length - 1) {
+            console.log('At oldest day');
+            previousMonth();
+            return false;
+        } else if (element.value == day_select_val) {
+            console.log('Previous day');
+            $("#DAY_SELECT").val($("#DAY_SELECT")[0].options[index + 1].value).change();
+            return false;
+        };
+    });
+}
+
+
 function nextHour() {
     var hour_select_val = $("#HOUR_SELECT").val();
 
-    newest_image_default = false;  // load oldest image when changing hours
+    oldest_entry_default = true;
 
     $('#HOUR_SELECT option').each(function(index, element) {
-        if (index == 0) {
+        if (index == 0 && element.value == hour_select_val) {
             console.log('At latest hour');
+            nextDay();
+            return false;
         } else if (element.value == hour_select_val) {
             console.log('Next hour');
             $("#HOUR_SELECT").val($("#HOUR_SELECT")[0].options[index - 1].value).change();
@@ -743,11 +859,13 @@ function nextHour() {
 function previousHour() {
     var hour_select_val = $("#HOUR_SELECT").val();
 
-    newest_image_default = true;  // load newest image when changing hours
+    oldest_entry_default = false;
 
     $('#HOUR_SELECT option').each(function(index, element) {
         if (index == $("#HOUR_SELECT")[0].options.length - 1) {
             console.log('At oldest hour');
+            previousDay();
+            return false;
         } else if (element.value == hour_select_val) {
             console.log('Previous hour');
             $("#HOUR_SELECT").val($("#HOUR_SELECT")[0].options[index + 1].value).change();
