select oldest month when incrementing years

--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -297,7 +297,7 @@ function hour_change(json_data) {
 
 
             if (! newest_entry_default) {
-                // oldst entry is last index
+                // oldest entry is last index
                 img_options_count = $('#IMG_SELECT option').length
                 $("#IMG_SELECT").val($("#IMG_SELECT")[0].options[img_options_count - 1].value).change();
             }
