--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -496,7 +496,7 @@ function day_change(json_data) {
 
 
             if (! newest_entry_default) {
-                // oldst image is last index
+                // oldest entry is last index
                 hour_options_count = $('#HOUR_SELECT option').length
                 $("#HOUR_SELECT").val($("#HOUR_SELECT")[0].options[hour_options_count - 1].value).change();
             }
@@ -562,7 +562,7 @@ function month_change(json_data) {
 
 
             if (! newest_entry_default) {
-                // oldst image is last index
+                // oldest entry is last index
                 day_options_count = $('#DAY_SELECT option').length
                 $("#DAY_SELECT").val($("#DAY_SELECT")[0].options[day_options_count - 1].value).change();
             }
@@ -629,6 +629,14 @@ function year_change(json_data) {
             rdata['MONTH_SELECT'].forEach(item => {
                 $("#MONTH_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
+
+
+            if (! newest_entry_default) {
+                // oldest entry is last index
+                month_options_count = $('#MONTH_SELECT option').length
+                $("#MONTH_SELECT").val($("#MONTH_SELECT")[0].options[month_options_count - 1].value).change();
+            }
+
 
             $("#DAY_SELECT").empty()
             rdata['DAY_SELECT'].forEach(item => {
