--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -298,7 +298,7 @@ function hour_change(json_data) {
 
             if (! newest_entry_default) {
                 // oldest entry is last index
-                img_options_count = $('#IMG_SELECT option').length
+                img_options_count = $('#IMG_SELECT option').length;
                 $("#IMG_SELECT").val($("#IMG_SELECT")[0].options[img_options_count - 1].value).change();
             }
 
@@ -355,18 +355,20 @@ function day_change(json_data) {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
-
-            if (! newest_entry_default) {
-                // oldest entry is last index
-                hour_options_count = $('#HOUR_SELECT option').length
-                $("#HOUR_SELECT").val($("#HOUR_SELECT")[0].options[hour_options_count - 1].value).change();
-            }
-
-
             $("#IMG_SELECT").empty()
             rdata['IMAGE_DATA'].forEach(item => {
                 $("#IMG_SELECT").append($('<option />', {'value' : item['url']}).text(item['date']));
             });
+
+
+            if (! newest_entry_default) {
+                // oldest entry is last index
+                hour_options_count = $('#HOUR_SELECT option').length;
+                img_options_count = $('#IMG_SELECT option').length;
+                $("#HOUR_SELECT").val($("#HOUR_SELECT")[0].options[hour_options_count - 1].value);
+                $("#IMG_SELECT").val($("#IMG_SELECT")[0].options[img_options_count - 1].value).change();
+            }
+
 
             img.src = fields['IMG_SELECT'].input.val();
 
@@ -418,14 +420,6 @@ function month_change(json_data) {
                 $("#DAY_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
-
-            if (! newest_entry_default) {
-                // oldest entry is last index
-                day_options_count = $('#DAY_SELECT option').length
-                $("#DAY_SELECT").val($("#DAY_SELECT")[0].options[day_options_count - 1].value).change();
-            }
-
-
             $("#HOUR_SELECT").empty()
             rdata['HOUR_SELECT'].forEach(item => {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
@@ -435,6 +429,18 @@ function month_change(json_data) {
             rdata['IMAGE_DATA'].forEach(item => {
                 $("#IMG_SELECT").append($('<option />', {'value' : item['url']}).text(item['date']));
             });
+
+
+            if (! newest_entry_default) {
+                // oldest entry is last index
+                day_options_count = $('#DAY_SELECT option').length;
+                hour_options_count = $('#HOUR_SELECT option').length;
+                img_options_count = $('#IMG_SELECT option').length;
+                $("#DAY_SELECT").val($("#DAY_SELECT")[0].options[day_options_count - 1].value);
+                $("#HOUR_SELECT").val($("#HOUR_SELECT")[0].options[hour_options_count - 1].value);
+                $("#IMG_SELECT").val($("#IMG_SELECT")[0].options[img_options_count - 1].value).change();
+            }
+
 
             img.src = fields['IMG_SELECT'].input.val();
 
@@ -485,14 +491,6 @@ function year_change(json_data) {
                 $("#MONTH_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
-
-            if (! newest_entry_default) {
-                // oldest entry is last index
-                month_options_count = $('#MONTH_SELECT option').length
-                $("#MONTH_SELECT").val($("#MONTH_SELECT")[0].options[month_options_count - 1].value).change();
-            }
-
-
             $("#DAY_SELECT").empty()
             rdata['DAY_SELECT'].forEach(item => {
                 $("#DAY_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
@@ -507,6 +505,20 @@ function year_change(json_data) {
             rdata['IMAGE_DATA'].forEach(item => {
                 $("#IMG_SELECT").append($('<option />', {'value' : item['url']}).text(item['date']));
             });
+
+
+            if (! newest_entry_default) {
+                // oldest entry is last index
+                month_options_count = $('#MONTH_SELECT option').length;
+                day_options_count = $('#DAY_SELECT option').length;
+                hour_options_count = $('#HOUR_SELECT option').length;
+                img_options_count = $('#IMG_SELECT option').length;
+                $("#MONTH_SELECT").val($("#MONTH_SELECT")[0].options[month_options_count - 1].value);
+                $("#DAY_SELECT").val($("#DAY_SELECT")[0].options[day_options_count - 1].value);
+                $("#HOUR_SELECT").val($("#HOUR_SELECT")[0].options[hour_options_count - 1].value);
+                $("#IMG_SELECT").val($("#IMG_SELECT")[0].options[img_options_count - 1].value).change();
+            }
+
 
             img.src = fields['IMG_SELECT'].input.val();
 
