--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -110,7 +110,7 @@ var newest_entry_default = true;
 
 <div class="row">
     <div class="text-center" style="font-size:10px">
-        Use arrow keys, WASD, or VIM keys to cycle images - Hour: Up/Down - Image: Left/Right
+        Use arrow keys, WASD, or VIM keys to cycle images - Hour: Up/Down
     </div>
 </div>
 
