--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -7469,6 +7469,19 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FOCUSER__I2C_ADDRESS.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FOCUSER__I2C_ADDRESS(class='form-control bg-secondary') }}
+            <div id="FOCUSER__I2C_ADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Hexadecimal address - Example: 0x60</div>
+        </div>
+    </div>
+
 </div><!-- end devices tab -->
 
 <div class="tab-pane fade" id="nav-adsb" role="tabpanel" aria-labelledby="nav-adsb-tab">
@@ -8097,6 +8110,7 @@ const field_names = [
     'FOCUSER__GPIO_PIN_2',
     'FOCUSER__GPIO_PIN_3',
     'FOCUSER__GPIO_PIN_4',
+    'FOCUSER__I2C_ADDRESS',
     'DEW_HEATER__CLASSNAME',
     'DEW_HEATER__I2C_ADDRESS',
     'DEW_HEATER__PIN_1',
