add gallery and image viewer links to lag view

--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -146,7 +146,7 @@
                             </li>
                             <li>
                                 <a href="{{ url_for('indi_allsky.image_lag_view') }}" class="dropdown-item">
-                                    <img src="{{ url_for('indi_allsky.static', filename='svg/journal-medical.svg') }}" width="16" height="16" alt="Image Lag"><span class="ms-1 d-none d-sm-inline">Image Lag</span></a>
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/stopwatch.svg') }}" width="16" height="16" alt="Image Lag"><span class="ms-1 d-none d-sm-inline">Image Lag</span></a>
                             </li>
                             <li>
                                 <a href="{{ url_for('indi_allsky.focus_view') }}" class="dropdown-item">
