--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -338,7 +338,7 @@ function populate_gallery(gallery_data) {
 
         lightbox.pswp.ui.registerElement({
             name: 'chart-button',
-            order: 7,
+            order: 8,
             title: 'Chart',
             isButton: true,
             tagName: 'a',
@@ -360,10 +360,33 @@ function populate_gallery(gallery_data) {
             }
         });
 
+        lightbox.pswp.ui.registerElement({
+            name: 'lag-button',
+            order: 8,
+            title: 'Lag',
+            isButton: true,
+            tagName: 'a',
+
+            // SVG with outline
+            html: {
+              isCustomSVG: true,
+              inner: '<path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5z"/><path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64l.012-.013.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5M8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3"/>',
+            },
+
+            onInit: (el, pswp) => {
+              el.setAttribute('target', '_blank');
+              el.setAttribute('rel', 'noopener');
+
+              pswp.on('change', () => {
+                //console.log('change');
+                el.href = "{{ url_for('indi_allsky.image_lag_view') }}?timestamp=" + pswp.currSlide.data.element.getAttribute("data-ts");
+              });
+            }
+        });
 
         lightbox.pswp.ui.registerElement({
             name: 'exclude-button',
-            order: 6,
+            order: 5,
             title: 'Include/Exclude',
             isButton: true,
             tagName: 'a',
