--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6049,9 +6049,22 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">
             <div>Example: D5 (GPIO5 / Pin 29 Raspi)</div>
             <div>Example: P0 - Pin for ADS1x15 ADC</div>
-            <div>Unused for most i2c devices</div>
+            <div>Unused for most i2c devices - CS for SPI</div>
         </div>
     </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__A_PIN_2.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__A_PIN_2(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__A_PIN_2-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
 
     <div class="form-group row">
         <div class="col-sm-2">
@@ -6116,7 +6129,19 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">
             <div>Example: D6 (GPIO6 / Pin 31 Raspi)</div>
             <div>Example: P0 - Pin for ADS1x15 ADC</div>
-            <div>Unused for most i2c devices</div>
+            <div>Unused for most i2c devices - CS for SPI</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__B_PIN_2.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__B_PIN_2(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__B_PIN_2-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
         </div>
     </div>
 
@@ -6183,7 +6208,19 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">
             <div>Example: D16 (GPIO16 / Pin 36 Raspi)</div>
             <div>Example: P0 - Pin for ADS1x15 ADC</div>
-            <div>Unused for most i2c devices</div>
+            <div>Unused for most i2c devices - CS for SPI</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__C_PIN_2.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__C_PIN_2(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__C_PIN_2-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
         </div>
     </div>
 
@@ -6250,7 +6287,19 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">
             <div>Example: D26 (GPIO16 / Pin 37 Raspi)</div>
             <div>Example: P0 - Pin for ADS1x15 ADC</div>
-            <div>Unused for most i2c devices</div>
+            <div>Unused for most i2c devices - CS for SPI</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__D_PIN_2.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__D_PIN_2(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__D_PIN_2-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
         </div>
     </div>
 
@@ -8142,21 +8191,25 @@ const field_names = [
     'TEMP_SENSOR__A_CLASSNAME',
     'TEMP_SENSOR__A_LABEL',
     'TEMP_SENSOR__A_PIN_1',
+    'TEMP_SENSOR__A_PIN_2',
     'TEMP_SENSOR__A_USER_VAR_SLOT',
     'TEMP_SENSOR__A_I2C_ADDRESS',
     'TEMP_SENSOR__B_CLASSNAME',
     'TEMP_SENSOR__B_LABEL',
     'TEMP_SENSOR__B_PIN_1',
+    'TEMP_SENSOR__B_PIN_2',
     'TEMP_SENSOR__B_USER_VAR_SLOT',
     'TEMP_SENSOR__B_I2C_ADDRESS',
     'TEMP_SENSOR__C_CLASSNAME',
     'TEMP_SENSOR__C_LABEL',
     'TEMP_SENSOR__C_PIN_1',
+    'TEMP_SENSOR__C_PIN_2',
     'TEMP_SENSOR__C_USER_VAR_SLOT',
     'TEMP_SENSOR__C_I2C_ADDRESS',
     'TEMP_SENSOR__D_CLASSNAME',
     'TEMP_SENSOR__D_LABEL',
     'TEMP_SENSOR__D_PIN_1',
+    'TEMP_SENSOR__D_PIN_2',
     'TEMP_SENSOR__D_USER_VAR_SLOT',
     'TEMP_SENSOR__D_I2C_ADDRESS',
     'TEMP_SENSOR__OPENWEATHERMAP_APIKEY',
