--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6882,6 +6882,63 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__AS3935_OUTDOOR_MODE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__AS3935_OUTDOOR_MODE(class='form-check-input') }}
+                <div id="TEMP_SENSOR__AS3935_OUTDOOR_MODE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div>Disable for Indoor mode (for more noisy environments)</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__AS3935_MASK_DISTURBER.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__AS3935_MASK_DISTURBER(class='form-check-input') }}
+                <div id="TEMP_SENSOR__AS3935_MASK_DISTURBER-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__AS3935_NOISE_LEVEL.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__AS3935_NOISE_LEVEL(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__AS3935_NOISE_LEVEL-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default: 2</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__AS3935_SPIKE_REJECTION.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__AS3935_SPIKE_REJECTION(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__AS3935_SPIKE_REJECTION-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default: 2</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__MQTT_HOST.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -8250,6 +8307,8 @@ const field_names = [
     'TEMP_SENSOR__SI1145_IR_GAIN_DAY',
     'TEMP_SENSOR__LTR390_GAIN_NIGHT',
     'TEMP_SENSOR__LTR390_GAIN_DAY',
+    'TEMP_SENSOR__AS3935_NOISE_LEVEL',
+    'TEMP_SENSOR__AS3935_SPIKE_REJECTION',
     'ADSB__DUMP1090_URL',
     'ADSB__USERNAME',
     'ADSB__PASSWORD',
@@ -8383,6 +8442,8 @@ const checkbox_field_names = [
     'TEMP_SENSOR__INA3221_CH1_ENABLE',
     'TEMP_SENSOR__INA3221_CH2_ENABLE',
     'TEMP_SENSOR__INA3221_CH3_ENABLE',
+    'TEMP_SENSOR__AS3935_OUTDOOR_MODE',
+    'TEMP_SENSOR__AS3935_MASK_DISTURBER',
     'TEMP_SENSOR__MQTT_TLS',
     'TEMP_SENSOR__MQTT_CERT_BYPASS',
     'DEW_HEATER__ENABLE_DAY',
