update help for sensor slots

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6088,6 +6088,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__A_USER_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
+            <div>All sensor values will populate multiple slots starting at this slot</div>
         </div>
     </div>
 
@@ -6167,6 +6168,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__B_USER_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
+            <div>All sensor values will populate multiple slots starting at this slot</div>
         </div>
     </div>
 
@@ -6246,6 +6248,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__C_USER_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
+            <div>All sensor values will populate multiple slots starting at this slot</div>
         </div>
     </div>
 
@@ -6325,6 +6328,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__D_USER_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
+            <div>All sensor values will populate multiple slots starting at this slot</div>
         </div>
     </div>
 
